Fix download link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <h2 id="project_tagline">an automatic and comprehensive pipeline for processing metabolomics data</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/wenbostar/metaX/download/metaX_1.3.4.zip">Download this project as a .zip file</a>
+              <a class="zip_download_link" href="https://github.com/wenbostar/metaX/download/" download="metaX_1.3.4.zip">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/wenbostar/metaX/download/metaX_1.3.4.tar.gz">Download this project as a tar.gz file</a>
             </section>
         </header>
