--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/wenbostar/metaX/download/" download="metaX_1.3.4.zip">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/wenbostar/metaX/download/metaX_1.3.4.tar.gz">Download this project as a tar.gz file</a>
+              <a class="tar_download_link" href="https://github.com/wenbostar/metaX/download/" download="metaX_1.3.4.tar.gz">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
