--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@ biocLite("metaX")
 </code></pre>
 
 
+<p>The user can also download the R package through the download link in this page.</p>
+
 <h3>
 <a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Frequently Asked Questions</h3>
 
